Add pause and reset buttons

--- a/index.html
+++ b/index.html
@@ -5,11 +5,15 @@
   <style>
     canvas {
       border: 1px solid black;
+      display: block;
+      margin-bottom: 10px;
     }
   </style>
 </head>
 <body>
   <canvas id="canvas" width="800" height="600"></canvas>
+  <button id="pauseButton">Pause</button>
+  <button id="resetButton">Reset</button>
   <script src="script.js"></script>
 </body>
 </html>
