--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <canvas id="canvas" width="800" height="600"></canvas>
   <button id="pauseButton">Pause</button>
   <button id="resetButton">Reset</button>
-  <script src="script.js"></script>
+  <script src="script.js" type="module"></script>
 </body>
 </html>
 
