Add more controls

--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
   <canvas id="canvas" width="800" height="600"></canvas>
   <button id="pauseButton">Pause</button>
   <button id="resetButton">Reset</button>
+  <label for="speed">Speed:</label>
+  <input type="range" id="speed" min="1" max="10" value="2">
+  
+  <label for="bounces">Bounces:</label>  
+  <input type="range" id="bounces" min="0" max="5" value="2">
+
+  <label for="time">Time:</label>
+  <input type="range" id="time" min="0" max="500" value="0">
+
   <script src="script.js" type="module"></script>
 </body>
 </html>
