Add moving obstacles

--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@
   <label for="bounces">Bounces:</label>  
   <input type="range" id="bounces" min="0" max="5" value="2">
 
-  <label for="time">Time:</label>
+  <label for="delay">Delay:</label>
+  <input type="range" id="delay" min="0" max="500" value="0">
+
+  <label for="time">time:</label>
   <input type="range" id="time" min="0" max="500" value="0">
   
   <script src="script.js" type="module"></script>
